--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ before_script:
 
 script:
   - docker login -u ${DOCKER_USERNAME} -p ${DOCKER_PASSWORD}
-  - docker buildx build --platform linux/amd64,linux/arm64 -t abhishek138/concourse-rsync-resource:$TRAVIS_BRANCH -t abhishek138/concourse-rsync-resource:latest --push .;
+  - docker buildx build --platform linux/amd64,linux/arm64 -t abhishek138/concourse-rsync-resource:latest -t abhishek138/concourse-rsync-resource:latest --push .;
